test/errors/expressions_error/zs/index_operators/alignment_expression_error.zs
package index_operators.alignment_expression_error;

struct AlignmentExpressionError
{
align(@index):
    uint8 fields[10];
};
